change how we space the footer copyright section and move navigation styling changes into timeout to prevent flicker if overlay is already open

--- a/working-assets/css/global.css
+++ b/working-assets/css/global.css
@@ -1746,8 +1746,8 @@ img.footer-logo {
 
 .footer-copyright {
     background-color: var(--c-off-white);
-    margin: 20px 0;
-    padding: 20px 20px 50px;
+    margin: 20px 0 40px;
+        padding: 20px;
     max-width: 100vw;
     color: var(--c-dark-grey);
     text-align: center;
