--- a/working-assets/css/pdp.css
+++ b/working-assets/css/pdp.css
@@ -822,5 +822,4 @@ form .quantity-warning {
 }
 .footer-copyright {
   margin-bottom: 0;
-  padding: 20px;
 }
